# squashbert

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
notes/: improving_1hop.md  setup.md
scripts/: analyze_errors.py  build_edge_cache.py  build_node_cache.py  run_experiments.sh  train_mlp.py  train_mlp_contrastive.py  train_mlp_deep.py  train_mlp_mean_pooling.py  tune.py
src/squashbert/: biolink.py  cache.py  embed.py  eval.py  kgx.py  model.py  render.py  sampler.py  train.py
tests/: test_biolink.py  test_cache.py  test_embed.py  test_integration.py  test_kgx.py  test_model.py  test_render.py  test_sampler.py
