[project]
name = "squashbert"
version = "0.1.0"
description = "Learn MLPs that map [node,edge,...,node] SAPBERT embeddings to the full-sentence SAPBERT embedding of an n-hop path."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "torch>=2.2",
    "transformers>=4.40",
    "sentence-transformers>=2.7",
    "bmt>=1.4",              # biolink-model-toolkit: inverse/symmetric, hierarchy
    "tqdm>=4.66",
    "orjson>=3.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/squashbert"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
